# tractor

./: .buildinfo  .clang-format  .clang-tidy  .dockerignore  .drone.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  applications.html  bootstrap-apt.sh  bootstrap-base.sh  bootstrap-bin.sh  bootstrap-venv.sh  bootstrap.sh  buf.yaml  calibration_application.html  calibration_module.html  ci.html  core_module.html  cpp_api.html  dev.Dockerfile  devel.sh  faqs.html  frontend_module.html  genindex.html  getting_started.html  index.html  libraries.html  license.html  microtractor_application.html  objects.inv  perception_module.html  program_tutorial.html  references.html  requirements-dev.txt  requirements.txt  search.html  (+8 more)
.doctrees/: applications.doctree  calibration_application.doctree  calibration_module.doctree  ci.doctree  core_module.doctree  cpp_api.doctree  environment.pickle  faqs.doctree  index.doctree  (+12 more)
cpp/farm_ng/: CMakeLists.txt  blobstore.cpp  blobstore.h  calibrate_apriltag_rig.cpp  calibrate_base_to_camera.cpp  calibrate_multi_view_apriltag_rig.cpp  calibrator.cpp  capture_calibration_dataset.cpp  capture_video_dataset.cpp  event_log.cpp  event_log.h  frame_grabber.h  image_loader.h  ipc.cpp  ipc.h  ipc_logger.cpp  log_playback.cpp  sophus_protobuf.h  tracking_camera.cpp  tracking_camera_utils.cpp  tracking_camera_utils.h  video_streamer.h
cpp/farm_ng/calibration/: CMakeLists.txt  apriltag.cpp  apriltag.h  apriltag_rig_calibrator.cpp  apriltag_rig_calibrator.h  base_to_camera_calibrator.cpp  base_to_camera_calibrator.h  base_to_camera_calibrator_driver.cpp  camera_model.h  flow_book_keeper.h  kinematics.h  local_parameterization.cpp  local_parameterization.h  multi_view_apriltag_rig_calibrator.cpp  visual_odometer.h
doc/: CMakeLists.txt  Doxyfile.in  applications.rst  calibration_application.rst  ci.rst  conf.py  core_module.rst  cpp_api.rst  frontend_module.rst  getting_started.rst  libraries.rst  references.rst  version_history.rst
modules/calibration/cpp/farm_ng/: CMakeLists.txt  align_sensor_rig.cpp  calibrate_apriltag_rig.cpp  calibrate_base_to_camera.cpp  calibrate_intrinsics.cpp  calibrate_multi_view_apriltag_rig.cpp  calibrate_multi_view_lidar.cpp  calibrate_robot_extrinsics.cpp  capture_calibration_dataset.cpp  capture_robot_extrinsics_dataset.cpp  capture_video_dataset.cpp  robot_hal_client.cpp  robot_hal_service_mock.cpp  tracking_camera.cpp  validate_robot_extrinsics.cpp
modules/calibration/cpp/farm_ng/calibration/: CMakeLists.txt  apriltag.cpp  apriltag_rig_calibrator.cpp  apriltag_rig_calibrator.h  base_to_camera_calibrator.cpp  base_to_camera_calibrator.h  camera_rig_apriltag_rig_cost_functor.h  flow_book_keeper.cpp  flow_book_keeper.h  intrinsic_calibrator.cpp  intrinsic_calibrator.h  kinematics.h  multi_view_apriltag_rig_calibrator.cpp  multi_view_apriltag_rig_calibrator.h  robot_hal_client.cc  robot_hal_client.h  visual_odometer.cpp  visual_odometer.h
modules/core/cpp/farm_ng/: CMakeLists.txt  blobstore.h  event_log.cpp  event_log.h  event_log_reader.cpp  event_log_reader.h  ipc.cpp  ipc.h  ipc_logger.cpp  log_playback.cpp  logger_example.cpp
modules/core/cpp/farm_ng/core/: CMakeLists.txt  blobstore.cpp  blobstore.h  event_log.cpp  event_log.h  event_log_reader.cpp  event_log_reader.h  format.h  init.cpp  init.h  ipc.cpp  ipc.h  logger.h  thread_pool.cpp  thread_pool.h
modules/examples/cpp/farm_ng/: CMakeLists.txt  countdown.cpp  helloworld.cpp
modules/examples/external_cmake/: CMakeLists.txt
modules/perception/cpp/farm_ng/: CMakeLists.txt  camera_pipeline.cpp  capture_video_dataset.cpp  create_video_dataset.cpp  detect_apriltags.cpp  tracking_camera.cpp
modules/perception/cpp/farm_ng/perception/: CMakeLists.txt  apriltag.cpp  apriltag.h  camera_model.cpp  camera_model.h  camera_pipeline.cpp  camera_pipeline.h  camera_pipeline_utils.cpp  create_video_dataset_program.cpp  create_video_dataset_program.h  frame_grabber.cpp  frame_grabber.h  frame_grabber_intel.cpp  frame_grabber_k4a.cpp  image_loader.cpp  image_loader.h  point_cloud.cpp  point_cloud.h  pose_graph.h  pose_utils.cpp  pose_utils.h  robot_arm_fk.h  sophus_protobuf.h  tensor.cpp  tensor.h  time_series.h  tracking_camera_utils.cpp  tracking_camera_utils.h  video_streamer.cpp  video_streamer.h
modules/perception_core/: CMakeLists.txt  README.md
modules/perception_core/cpp/farm_ng/: CMakeLists.txt  apriltag.cpp  apriltag.h  apriltag_test.cpp  camera_model.cpp  camera_model.h  camera_model_test.cpp  capture_video_dataset.cpp  frame_grabber.h  image_loader.h  pose_utils.cpp  sophus_protobuf.h  time_series.cpp  tracking_camera.cpp  tracking_camera_utils.cpp  tracking_camera_utils.h  video_streamer.h
modules/perception_core/cpp/farm_ng/perception_core/: CMakeLists.txt  apriltag.cpp  apriltag_test.cpp  camera_model.cpp  camera_model_test.cpp  frame_grabber.cpp  frame_grabber.h  frame_grabber_intel.cpp  image_loader.cpp  image_loader.h  pose_utils.cpp  sophus_protobuf.h  time_series.cpp  tracking_camera_utils.cpp  tracking_camera_utils.h  video_streamer.cpp  video_streamer.h
modules/perception_core/protos/: CMakeLists.txt
modules/perception_core/protos/farm_ng/perception_core/: apriltag.proto  camera_model.proto  capture_calibration_dataset.proto  capture_video_dataset.proto  geometry.proto  image.proto  tracking_camera.proto
modules/perception_core/protos/farm_ng/v1/: apriltag.proto  camera_model.proto  capture_calibration_dataset.proto  geometry.proto  image.proto
modules/perception_core/protos/farm_ng_proto/perception_core/v1/: apriltag.proto  camera_model.proto  geometry.proto  image.proto  tracking_camera.proto
modules/perception_core/python/farm_ng/: proto_utils.py
modules/perception_core/python/farm_ng/perception_core/: proto_utils.py
modules/perception_core/scripts/: Dockerfile.protoc  build-protos.sh
modules/tractor/cpp/farm_ng/: CMakeLists.txt  calibrate_base_to_camera.cpp  tracking_study.cpp
modules/tractor/cpp/farm_ng/tractor/: CMakeLists.txt  base_to_camera_calibrator.cpp  base_to_camera_calibrator.h
(+695 files in other folders)
