add_subdirectory(calibration)

add_executable(calibrate_apriltag_rig calibrate_apriltag_rig.cpp)
target_link_libraries(calibrate_apriltag_rig farm_ng_calibration)

add_executable(calibrate_multi_view_apriltag_rig calibrate_multi_view_apriltag_rig.cpp)
target_link_libraries(calibrate_multi_view_apriltag_rig farm_ng_calibration)

add_executable(calibrate_intrinsics calibrate_intrinsics.cpp)
target_link_libraries(calibrate_intrinsics farm_ng_calibration)

add_executable(calibrate_multi_view_lidar calibrate_multi_view_lidar.cpp)
target_link_libraries(calibrate_multi_view_lidar farm_ng_calibration)

add_executable(capture_robot_extrinsics_dataset capture_robot_extrinsics_dataset.cpp)
target_link_libraries(capture_robot_extrinsics_dataset farm_ng_calibration farm_ng_calibration_robot_hal_client)

add_executable(calibrate_robot_extrinsics calibrate_robot_extrinsics.cpp)
target_link_libraries(calibrate_robot_extrinsics farm_ng_calibration farm_ng_calibration_robot_hal_client)

add_executable(validate_robot_extrinsics validate_robot_extrinsics.cpp)
target_link_libraries(validate_robot_extrinsics farm_ng_calibration farm_ng_calibration_robot_hal_client)

add_executable(robot_hal_service_mock robot_hal_service_mock.cpp)
target_link_libraries(robot_hal_service_mock farm_ng_core farm_ng_perception farm_ng_calibration_protobuf farm_ng_calibration_grpc)



add_executable(align_sensor_rig align_sensor_rig.cpp)
target_link_libraries(align_sensor_rig farm_ng_core farm_ng_perception farm_ng_calibration)
