# [docs] helloworld
add_executable(helloworld helloworld.cpp)
target_link_libraries(helloworld farm_ng_examples_protobuf farm_ng_core)
# [docs] helloworld

# [docs] countdown
add_executable(countdown countdown.cpp)
target_link_libraries(countdown farm_ng_examples_protobuf farm_ng_core)
# [docs] countdown
