add_subdirectory(perception)

farm_ng_add_executable(capture_video_dataset)
target_link_libraries(capture_video_dataset farm_ng_perception)

farm_ng_add_executable(create_video_dataset)
target_link_libraries(create_video_dataset farm_ng_perception)


farm_ng_add_executable(detect_apriltags)
target_link_libraries(detect_apriltags farm_ng_perception)

farm_ng_add_executable(camera_pipeline)
target_link_libraries(camera_pipeline farm_ng_perception)
